gccida/g2/expand_twoval_binop
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_twoval_binop/src/optabs.c:2388:27: error: unknown type name 'optab_0'; did you mean 'optab'?
int  expand_twoval_binop( optab_0 binoptab, rtx op0, rtx op1, rtx targ0, rtx targ1, int unsignedp) 
                          ^~~~~~~
                          optab
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_twoval_binop/src/optabs.h:48:5: note: 'optab' declared here
} * optab;
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_twoval_binop/src/optabs.c:2391:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v11; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_twoval_binop/src/optabs.c:2398:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v18; // r8d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_twoval_binop/src/optabs.c:2405:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v26; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_twoval_binop/src/optabs.c:2406:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v27; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_twoval_binop/src/optabs.c:2420:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode1; // [rsp+30h] [rbp-58h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_twoval_binop/src/optabs.c:2424:1: error: must use 'enum' tag to refer to type 'mode_class'
mode_class classa; // [rsp+48h] [rbp-40h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_twoval_binop/src/machmode.h:52:30: note: enum 'mode_class' is hidden by a non-type declaration of 'mode_class' here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_twoval_binop/src/optabs.c:2425:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode0; // [rsp+4Ch] [rbp-3Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_twoval_binop/src/optabs.c:2426:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode0b; // [rsp+4Ch] [rbp-3Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_twoval_binop/src/optabs.c:2427:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode0a; // [rsp+4Ch] [rbp-3Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_twoval_binop/src/optabs.c:2434:10: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
classa = mode_class_0[v11]; 
         ^~~~~~~~~~~~
         mode_class
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_twoval_binop/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_twoval_binop/src/optabs.c:2483:11: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
operand = insn_data_0[insn_code].operand; 
          ^~~~~~~~~~~
          insn_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_twoval_binop/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_twoval_binop/src/optabs.c:2537:7: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
v24 = insn_data_0[icode].genfun( targ0a, cop0); 
      ^~~~~~~~~~~
      insn_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_twoval_binop/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_twoval_binop/src/optabs.c:2537:32: error: called object type '<dependent type>' is not a function or function pointer
v24 = insn_data_0[icode].genfun( targ0a, cop0); 
                               ^
14 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_twoval_binop/src/obj/optabs.o] Error 1
